--- a/SchoolBoard.MVC/Views/Student/Detail.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Detail.cshtml
@@ -1,38 +1,41 @@
 ﻿@model SchoolBoard.Models.Student.StudentDetailViewModel
 
-<h2>@Model.Student.Name</h2>
+<div class="container-fluid">
+    <h2 style="justify-content: flex-start">@Model.Student.Name</h2>
 
-<span id="headingBtn"><a style="color:ghostwhite" asp-controller="Post" asp-action="Create" asp-route-id="@Model.Student.Id" class="btn btn-newPost">Create Post</a></span>
 
-@if (Model.Posts.Any())
-{
-    <table>
-        <tbody>
-            @foreach (var post in Model.Posts)
-            {
-                <tr>
-                    <td>
-                        <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id"> @post.Title</a>
-                       
-                    </td>
 
-                    <td style="color: ghostwhite">
-                        @post.Author.Name
-                    </td>
-                    <td style="color: ghostwhite">
-                        @post.Created
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
-@if (!Model.Posts.Any())
-{
-    <h2>
-        Looks like there aren't any posts for @Model.Student.Name yet.<br />
+    @if (Model.Posts.Any())
+    {
+        <table style="justify-content:flex-start">
+            <tbody>
+                @foreach (var post in Model.Posts)
+                {
+                    <tr>
+                        <td>
+                            <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id"> @post.Title</a>
 
-        Create one <a asp-controller="Post" asp-action="Create" asp-route-id="@Model.Student.Id">here.</a> 
-    </h2>
-}
+                        </td>
 
+                        <td style="color: ghostwhite">
+                            @post.Author.Name
+                        </td>
+                        <td style="color: ghostwhite">
+                            @post.Created
+                        </td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+    @if (!Model.Posts.Any())
+    {
+        <h3 style="justify-content:flex-start">
+            Looks like there aren't any posts for @Model.Student.Name yet.<br />
+
+
+        </h3>
+    }
+    <span style="justify-content:flex-end" id="headingBtn"><a style="color:ghostwhite; justify-content:flex-end; align-content:stretch" asp-controller="Post" asp-action="Create" asp-route-id="@Model.Student.Id" class="btn btn-newPost">Create Post</a></span>
+
+</div>
