--- a/SchoolBoard.MVC/wwwroot/css/site.css
+++ b/SchoolBoard.MVC/wwwroot/css/site.css
@@ -1,5 +1,12 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
+body{
+    color: ghostwhite;
+}
+
+a{
+    color: ghostwhite;
+}
 
 .navbar {
     box-shadow: 0 5px 4px -6px #000;
@@ -33,13 +40,14 @@ div{
 
 
 .btn-primary {
-  color: #fff;
+    text-align:left;
+  color: ghostwhite;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
 
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
-  color: #fff;
+  color: ghostwhite;
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
@@ -56,12 +64,7 @@ html {
     }
 }
 
-.border-top {
-  border-top: 1px solid #e5e5e5;
-}
-.border-bottom {
-  border-bottom: 1px solid #e5e5e5;
-}
+
 
 .box-shadow {
   box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05);
