--- a/SchoolBoard.MVC/Views/Home/Index.cshtml
+++ b/SchoolBoard.MVC/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
                                             {
                                                 <span>No Replies</span>
                                             }
-                                            else
+                                            @if(post.RepliesCount > 1)
                                             {
                                                 <span>@post.RepliesCount Replies</span>
                                             }
