--- a/SchoolBoard.MVC/Views/Student/Detail.cshtml
+++ b/SchoolBoard.MVC/Views/Student/Detail.cshtml
@@ -13,7 +13,7 @@
                 {
                     <tr>
                         <td>
-                            <a asp-controller="Post" asp-action="Index" asp-route-id="@post.Id"> @post.Title</a>
+                            <a style="color: darkkhaki" asp-controller="Post" asp-action="Index" asp-route-id="@post.Id"> @post.Title</a>
 
                         </td>
 
@@ -36,6 +36,6 @@
 
         </h3>
     }
-    <span style="justify-content:flex-end" id="headingBtn"><a style="color:ghostwhite; justify-content:flex-end; align-content:stretch" asp-controller="Post" asp-action="Create" asp-route-id="@Model.Student.Id" class="btn btn-newPost">Create Post</a></span>
+    <span style="justify-content:flex-end" id="headingBtn"><a style="color:darkkhaki; justify-content:flex-end; align-content:stretch" asp-controller="Post" asp-action="Create" asp-route-id="@Model.Student.Id" class="btn btn-newPost">Create Post</a></span>
 
 </div>
