--- a/SchoolBoard.MVC/Views/Post/Create.cshtml
+++ b/SchoolBoard.MVC/Views/Post/Create.cshtml
@@ -12,6 +12,9 @@
         <textarea asp-for="Body" class="form-control"></textarea>
 
     </div>
+    <button style="color:darkkhaki" type="submit" id="submitPostBtn" class="btn btn-submitPost">Submit</button>
+    <input asp-for="StudentId" type="hidden" />
+
 
 
 </form>
@@ -22,10 +25,10 @@
         {
             <form method="post" enctype="multipart/form-data" asp-controller="Profile" asp-action="Upload">
                 <div style="color:ghostwhite" id="upload">
-                    <label style="color: ghostwhite" class="btn-default btn-file">
+                    <label style="color: darkkhaki" class="btn-default btn-file">
                         Select <input type="file" name="file" style="display: none" />
                     </label>
-                    <button style="color:ghostwhite" type="submit" id="btn-prfimg" class="btn btn-default">Upload</button>
+                    <button style="color:darkkhaki" type="submit" id="btn-prfimg" class="btn btn-default">Upload</button>
                 </div>
 
             </form>
@@ -33,6 +36,3 @@
     </div>
 
 </div>
-<button style="color:ghostwhite" type="submit" id="submitPostBtn" class="btn btn-submitPost">Submit</button>
-<input asp-for="StudentId" type="hidden" />
-
