--- a/SchoolBoard.MVC/wwwroot/css/site.css
+++ b/SchoolBoard.MVC/wwwroot/css/site.css
@@ -62,7 +62,7 @@ html {
 }
 @media (min-width: 768px) {
     html {
-        font-family: 'Nunito', sans-serif;
+        font-family: Calibri;
         font-size: 16px;
     }
 }
@@ -83,16 +83,16 @@ button.accept-policy {
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
-    font-family: 'Nunito', sans-serif;
+    font-family:Calibri;
     position: relative;
     min-height: 100%;
 }
 h1 {
-    font-family: 'Nunito', sans-serif;
+    font-family: Calibri;
     color: ghostwhite;
 }
 h2 {
-    font-family: 'Nunito', sans-serif;
+    font-family: Calibri;
     color: ghostwhite;
 }
 body {
